added google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Tolulope Fakoya (Hunter)">
+  <meta itemprop="name" content="Tolulope Fakoya (Hunter) Toluhunter">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image" content="#">
 
@@ -27,6 +27,15 @@
   <meta name="twitter:title" content="Tolulope Fakoya (Hunter)">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image" content="#">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6WMS15MTQ9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-6WMS15MTQ9');
+  </script>
 </head>
 
 <body>
