updated portfolio thumbnail and added it to image preview

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image" content="#">
 
-  <meta property="og:url" content="#">
+  <meta property="og:url" content="https://toluhunter.com">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Tolulope Fakoya (Hunter)">
   <meta property="og:description" content="Self Developed personal website build with React.js">
-  <meta property="og:image" content="#">
+  <meta property="og:image" content="%PUBLIC_URL%/portfolio.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
