added image for search engine tag

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Tolulope Fakoya (Hunter) Toluhunter">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
-  <meta itemprop="image" content="#">
+  <meta itemprop="image" content="%PUBLIC_URL%/portfolio.png">
 
   <meta property="og:url" content="https://toluhunter.com">
   <meta property="og:type" content="website">
